tests/build/impl_ui_node/delegate_list_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
    |
9   | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
    |                                                                 ^^^^^^^^^^^^^^^ the trait `UiNodeList` is not implemented for `NotANodeList`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list_mut<U: UiNodeList + ?Sized>(d: &mut U) -> &mut U {
    |                                 ---------- required by this bound in `delegate_list_mut`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
note: required by `zero_ui::prelude::UiNodeList::init_all`
  --> $DIR/ui_list.rs:37:5
   |
37 |     fn init_all(&mut self, ctx: &mut WidgetContext);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
note: required by `zero_ui::prelude::UiNodeList::deinit_all`
  --> $DIR/ui_list.rs:40:5
   |
40 |     fn deinit_all(&mut self, ctx: &mut WidgetContext);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
note: required by `zero_ui::prelude::UiNodeList::update_all`
  --> $DIR/ui_list.rs:43:5
   |
43 |     fn update_all(&mut self, ctx: &mut WidgetContext);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |     fn event_all<EU: EventUpdateArgs>(&mut self, ctx: &mut WidgetContext, args: &EU);
   |                      --------------- required by this bound in `zero_ui::prelude::UiNodeList::event_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:32
    |
9   | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
    |                                ^^^^^^^^^^^ the trait `UiNodeList` is not implemented for `NotANodeList`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list<U: UiNodeList + ?Sized>(d: &U) -> &U {
    |                             ---------- required by this bound in `delegate_list`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |         O: FnMut(usize) -> PxPoint;
   |            ----------------------- required by this bound in `zero_ui::prelude::UiNodeList::render_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
note: required by `zero_ui::prelude::UiNodeList::render_update_all`
  --> $DIR/ui_list.rs:98:5
   |
98 |     fn render_update_all(&self, ctx: &mut RenderContext, update: &mut FrameUpdate);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |         F: FnMut(usize, &mut LayoutContext) -> PxSize;
   |            ------------------------------------------ required by this bound in `zero_ui::prelude::UiNodeList::arrange_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |     fn measure_all<A, D>(&mut self, ctx: &mut LayoutContext, available_size: A, desired_size: D)
   |                       - required by this bound in `zero_ui::prelude::UiNodeList::measure_all`
